--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@types/node": "^22.15.30",
     "axios": "^1.9.0",
+    "element-plus": "^2.9.11",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.28.0",
+    "eslint-plugin-vue": "^10.2.0",
+    "globals": "^16.2.0",
+    "sass-embedded": "^1.89.1",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.33.1",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.7.0",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.8"
   }
