--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@types/moment": "^2.13.0",
     "@types/node": "^22.15.30",
     "axios": "^1.9.0",
     "element-plus": "^2.9.11",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
