--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/ui": "^3.2.2",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.28.0",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
+    "jsdom": "^26.1.0",
     "sass-embedded": "^1.89.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.33.1",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.7.0",
     "vite": "^6.3.5",
+    "vitest": "^3.2.2",
     "vue-tsc": "^2.2.8"
   }
 }
