--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
@@ -25,7 +30,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@pinia/testing": "^1.0.2",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/coverage-v8": "3.2.2",
     "@vitest/ui": "^3.2.2",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
